test_regress/t/t_struct_unpacked_bad.out
%Warning-UNPACKED: t/t_struct_unpacked_bad.v:9:12: Unsupported: Unpacked struct/union
   typedef struct {
           ^~~~~~
                   ... Use "/* verilator lint_off UNPACKED */" and lint_on around source to disable this message.
%Error: Exiting due to
